--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,183 @@
+/* RESET */
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+    display: block;
+}
 body {
-  width: 400px;
+    line-height: 1;
+}
+ol, ul {
+    list-style: none;
+}
+blockquote, q {
+    quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+/*CODE*/
+
+
+@import url("font-awesome.css");
+
+* {
+    box-sizing: border-box;
+}
+.ali{
+
+
+
+}
+body {
+    background-size: cover;
+    position: relative;
+    height: 258px;
+    width: 200px;
+    font-family: "Roboto";
+}
+
+div.top {
+    display: -webkit-flex;
+    display: flex;
+    width: 100%;
+    height: 80%;
+    padding: 24px 20px 35px 20px;
+    text-align: center;
+}
+
+div.top img {
+    margin: 0 auto;
+    display: block;
+    width: 130px;
+    height: 130px;
+}
+
+div.bottom {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    width: 100%;
+    height: 80px;
+}
+
+a.btn-site {
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    display: block;
+    text-align: center;
+    background: #FFF;
+    font-size: 13px;
+    color: #272727;
+    text-transform: uppercase;
+    text-decoration: none;
+    outline: 0;
+    -webkit-transition: all ease 0.25s;
+    -o-transition: all ease 0.25s;
+    transition: all ease 0.25s;
+}
+
+a.btn-site:hover {
+    background: #17b255;
+    color: #FFF;
+    -webkit-transition: all ease 0.25s;
+    -o-transition: all ease 0.25s;
+    transition: all ease 0.25s;
+}
+
+ul.nav-social {
+        list-style: none;
+        width: 100%;
+        height: 40px;
+        display: -webkit-flex;
+        display: flex;
+}
+
+ul.nav-social li {
+        width: 25%;
+        height: 40px;
+        text-align: center;
+}
+
+ul.nav-social li a {
+  padding-top: 10px;
+        display: block;
+        width: 100%;
+        height: 40px;
+        line-height: 40px;
+        font-size: 17px;
+        color: #FFF;
+        text-transform: uppercase;
+        background: #191919;
+        -webkit-transition: all ease 0.25s;
+        -o-transition: all ease 0.25s;
+        transition: all ease 0.25s;
+}
+
+ul.nav-social li a.twitch:hover {
+        background: #6441a5;
+        -webkit-transition: all ease 0.25s;
+        -o-transition: all ease 0.25s;
+        transition: all ease 0.25s;
+}
+
+ul.nav-social li a.youtube:hover {
+        background: #b31217;
+        -webkit-transition: all ease 0.25s;
+        -o-transition: all ease 0.25s;
+        transition: all ease 0.25s;
+}
+
+ul.nav-social li a.twitter:hover {
+        background: #55acee;
+        -webkit-transition: all ease 0.25s;
+        -o-transition: all ease 0.25s;
+        transition: all ease 0.25s;
+}
+
+ul.nav-social li a.facebook:hover {
+        background: #3b5998;
+        -webkit-transition: all ease 0.25s;
+        -o-transition: all ease 0.25s;
+        transition: all ease 0.25s;
+}
+
+span {
+        display: block;
+        width: 100%;
+        height: 8px;
+        background-color: #d30707;
 }
