--- a/styles/main.css
+++ b/styles/main.css
@@ -59,6 +59,7 @@ table {
 }
 body {
     background-size: cover;
+    background-image: url('/images/fond.png');
     position: relative;
     height: 258px;
     width: 200px;
@@ -133,7 +134,6 @@ ul.nav-social li {
 }
 
 ul.nav-social li a {
-  padding-top: 10px;
         display: block;
         width: 100%;
         height: 40px;
